plorp2/plorp.css
/* ... */
.select-bar>span.selected.upgrades {
    --accent-col: goldenrod;
}

.select-bar>span.selected.inventory {
    --accent-col: green;
}

.select-bar>span.selected.powercubes {
    --accent-col: lightcoral;
}

.select-bar>span.selected:not(:first-child) {
    border-left: 1px solid white;
    border-right: 1px solid transparent;
}

.select-bar>span.selected:not(:last-child) {
    border-right: 1px solid white;
    border-left: 1px solid transparent;
}

.select-bar>span.selected:not(:last-child):not(:first-child) {
    border-right: 1px solid white;
    border-left: 1px solid white;
}

.sidebar-menu-content {
    padding-left: 16px;
    padding-right: 16px;
}

.sidebar-menu-content>div {
    display: none;
}

.sidebar-menu-content>div.active {
    display: unset;
}

.select-bar>span {
    text-align: center;
    flex-grow: 1;
}

.tile-hp-container, .tile-armour-container, .inventory-item {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.tile-richnesses-container {
    display: flex;
    flex-direction: column;
}

.inventory-view {
    display: flex;
    flex-direction: column;
    gap: 4px;

    margin-top: 16px;
}

.inventory-item .item-name {
    --textcol: white;
    --bordercol: #222;

    color: var(--textcol);
    text-shadow: -1px -1px 0 var(--bordercol), 1px -1px 0 var(--bordercol), -1px 1px 0 var(--bordercol), 1px 1px 0 var(--bordercol);
}

.inv-actionbuttons {
    margin-left: auto;
    width: min-content;
    flex-wrap: nowrap;
    display: flex;
    text-wrap: nowrap;
}

.inline-button {
    border: 1px solid white;
    background-color: #060;

    padding: 4px;
    padding-left: 8px;
    padding-right: 8px;

    margin-left: 8px;

    cursor: pointer;

    align-self: center;
}

.inline-button:hover {
    background-color: #0a0;
}

.inline-button:active {
    background-color: #030;
}

.inline-button.disabled {
    cursor: default;
    background-color: #222;
}

.spacer {
    width: 16px;
}

.upgrade-infobox {
    flex-basis: 50%;
}

.upgrade-buttons {
    flex-grow: 1;
}

.upgrade-num-owned {
    max-width: 64px;
}

.upgrade-item {
    gap: 32px;
    margin-bottom: 16px;
}

.upgrade-item>* {
    flex-grow: 1;
}

.upgrade-basic-info {
    justify-content: space-between;
}

.upgrade-num-owned {
    align-self: center;
}

.upgrade-buttons {
    justify-content: flex-end;

    text-wrap: nowrap;
}

.upgrademax {
    min-width: 144px;
    max-width: 144px;
}

.upgrade-num-owned {
    text-align: center;

    min-width: 64px;
    max-width: 64px;
}

.upgrade-cost {
    color: gold;
}

.upgrade-cost-max {
    color: lime;
}

.upgrade-name {
    color: cyan;
}

.upgrade-desc {
    color: gray;
}

.upgrade-num-owned {
    color: orange;
}

.helptext {
    width: 512px;
    height: auto;

    display: flex;
    flex-direction: column;

    /* font-size: 12px; */

    gap: 12px;

    color: #cfc;

    margin-top: auto;
}

.help-important {
    color: #0df;
}

.player-stats-view {
    display: flex;
    flex-direction: column;
}

.player-stats-entry {
    display: flex;
    flex-direction: row;

    justify-content: space-between;
}

.pickicon {
    align-items: center;
}

.pickicon {
    font-size: 14px;
}

.pickicon img {
    border: 1px solid white;
    padding: 4px;
    margin-right: 8px;
}

.pickicon input {
    display: inline;
    width: min-content;
}

.player-stats-icon {
    width: 64px;
    height: 64px;
}

.shaking-text {
    display: inline-block;
}

.shaking-text span {
    display: inline-block;
}

.ascend-text {
    font-size: 22px;
    --shadowcol: #a77;

    text-shadow: 1px 1px 3px var(--shadowcol), -1px 1px 3px var(--shadowcol), 1px -1px 3px var(--shadowcol), -1px -1px 3px var(--shadowcol);
}

.ascend-button {
    cursor: pointer;

    background-color: #400;
    text-align: center;
    border: 2px solid #944;

    padding-top: 16px;
    padding-bottom: 16px;
}

.ascend-button:hover {
    background-color: #722;
    border: 2px solid #a55;
}

.ascend-button:active {
    background-color: #200;
    border: 2px solid #733;
}

.ascend-button.disabled {
    cursor: default;

    background-color: #222;
    border: 2px solid #888;
}

.ascend-button .ascend-text.disabled {
    color: #999;
    --shadowcol: #444;
}

.powercubes-projected-gain {
    font-size: 22px;

    background-color: #833;
    border: 1px solid #b55;
    padding: 2px;

    margin-left: 12px;
}

.powercubes-projected-gain-mini {
    font-size: 12px;

    flex-grow: 0;

    background-color: #833;
    border: 1px solid #b55;

    padding: 2px;

    margin-left: 12px;
    margin-bottom: auto;
    margin-top: auto;
}

.powercubes-infotext {
    margin-top: 8px;
}

.infotext {
    font-size: 14px;
    color: #ddd;
}

.powercubes-upgrades-container {
    margin-top: 24px;
}

.powercubes-choices-container {
    display: flex;
    flex-direction: column;
}

.powercubes-choices {
    margin-top: 24px;
}

.powercubes-choice {
    display: flex;
    flex-direction: row;
    
    gap: 16px;
    margin-top: 16px;
}

@property --hmul {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}

@keyframes powercubes_choice_float {
  from {--hmul: 0}
  to {--hmul: 1}
}

.powercubes-choices .powercubes-choice-button {
    cursor: default;

    background-color: #400;
    border: 1px solid #a33;
    padding: 16px;

    display: flex;
    flex-direction: column;
    align-items: center;

    flex-basis: 50%;
}
/* ... */

